--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,4 @@
 
-.main-content {
-  padding-top: 120px;
-}
-
 a,
 a:visited,
 a:active {
@@ -14,3 +10,23 @@ a:hover {
   color: #40CD32;
 }
 
+/* Media query for smartphones */
+@media screen and (max-width: 650px) {
+  .main-content {
+    padding-top: 40px;
+  }
+}
+
+/* Media query for tablets */
+@media screen and (min-width: 651px) and (max-width: 1280px) {
+  .main-content {
+    padding-top: 80px;
+  }
+}
+
+/* Media query for laptops and widescreen displays */
+@media screen and (min-width: 1281px) {
+  .main-content {
+    padding-top: 120px;
+  }
+}
