--- a/src/components/navigation/Navigation.css
+++ b/src/components/navigation/Navigation.css
@@ -7,8 +7,9 @@ nav {
     position: fixed;
     justify-content: space-between;
     align-items: center;
+    flex-grow: 0;
+    flex-shrink: 0;
     width: 100%;
-    padding: 0 12px;
     background-color: black;
     color: #FFFFFF;
     border-bottom: 1px solid #3CBE6B;
@@ -72,10 +73,7 @@ nav {
     flex-direction: column;
     position: absolute;
     list-style: none;
-    font-size: 18px;
-    gap: 10px;
     margin: 0;
-    padding: 20px;
     border-radius: 5px;
     border: 1px solid #FFFFFF;
     background-color: #3CBE6B;
@@ -92,28 +90,29 @@ nav {
     opacity: 1;
 }
 
-/* Media query for smartphones */
-@media screen and (max-width: 650px) {
+
+/* Telefoon in portrait mode */
+@media screen and (max-width: 576px) {
     .logo-container img {
-        width: 150px;
-        margin: 4px;
+        width: 160px;
+        margin: 0.1em;
     }
     .menu-items {
-        right: 25px;
-        top: 50px;
-        font-size: 12px;
-        gap: 10px;
-        padding: 20px;
+        right: 2.5em;
+        top: 4em;
+        font-size: 0.75em;
+        gap: 1em;
+        padding: 1em;
     }
     .button-menu-container {
-        gap: 12px;
+        gap: 0.5em;
     }
     .logout-name-div {
-        flex-basis: 200px;
-        gap: 12px;
+        flex-basis: 150px;
+        gap: 0.5em;
     }
     .hamburger-menu {
-        padding: 5px;
+        padding: 0.5em;
     }
     .bar {
         width: 20px;
@@ -131,28 +130,67 @@ nav {
     }
 }
 
-/* Media query for tablets */
-@media screen and (min-width: 651px) and (max-width: 1280px) {
+/* Telefoon in landscape mode */
+@media screen and (min-width: 576px) and (max-width: 767px) {
     .logo-container img {
         width: 250px;
-        margin: 6px;
+        margin: 0.25em;
     }
     .menu-items {
-        right: 50px;
-        top: 75px;
-        font-size: 16px;
-        gap: 10px;
-        padding: 20px;
+        right: 3.5em;
+        top: 5.75em;
+        font-size: 0.75em;
+        gap: 1em;
+        padding: 1.5em;
     }
     .button-menu-container {
-        gap: 24px;
+        gap: 1.75em;
+    }
+    .logout-name-div {
+        flex-basis: 200px;
+        gap: 0.75em;
+    }
+    .hamburger-menu {
+        padding: 1em;
+    }
+    .bar {
+        width: 20px;
+        height: 2px;
+        margin: 6px 0;
+    }
+    .hamburger-menu.open .bar:nth-child(1) {
+        transform: rotate(-45deg) translate(-5px, 6px);
+    }
+    .hamburger-menu.open .bar:nth-child(2) {
+        opacity: 0;
+    }
+    .hamburger-menu.open .bar:nth-child(3) {
+        transform: rotate(45deg) translate(-5px, -6px);
+    }
+}
+
+/* Tablets */
+@media screen and (min-width: 768px) and (max-width: 991px) {
+    .logo-container img {
+        width: 300px;
+        margin: 0.5em;
+    }
+    .menu-items {
+        right: 3.5em;
+        top: 5.75em;
+        font-size: 1em;
+        gap: 1em;
+        padding: 1.25em;
+    }
+    .button-menu-container {
+        gap: 1.5em;
     }
     .logout-name-div {
         flex-basis: 300px;
-        gap: 24px;
+        gap: 1.5em;
     }
     .hamburger-menu {
-        padding: 15px;
+        padding: 1em;
     }
     .bar {
         width: 25px;
@@ -170,28 +208,67 @@ nav {
     }
 }
 
-/* Media query for laptops and widescreen displays */
-@media screen and (min-width: 1281px) {
+/* Grote tablets en kleine computer schermen */
+@media screen and (min-width: 992px) and (max-width: 1199px) {
     .logo-container img {
-        width: 350px;
-        margin: 8px;
+        width: 300px;
+        margin: 0.5em;
     }
     .menu-items {
-        right: 75px;
-        top: 100px;
-        font-size: 18px;
-        gap: 10px;
-        padding: 20px;
+        right: 3.5em;
+        top: 5.75em;
+        font-size: 1em;
+        gap: 1em;
+        padding: 1.25em;
     }
     .button-menu-container {
-        gap: 32px;
+        gap: 1.5em;
+    }
+    .logout-name-div {
+        flex-basis: 300px;
+        gap: 1.5em;
+    }
+    .hamburger-menu {
+        padding: 1em;
+    }
+    .bar {
+        width: 25px;
+        height: 2px;
+        margin: 8px 0;
+    }
+    .hamburger-menu.open .bar:nth-child(1) {
+        transform: rotate(-45deg) translate(-8px, 6px);
+    }
+    .hamburger-menu.open .bar:nth-child(2) {
+        opacity: 0;
+    }
+    .hamburger-menu.open .bar:nth-child(3) {
+        transform: rotate(45deg) translate(-8px, -6px);
+    }
+}
+
+/* Standaard computer scherm */
+@media screen and (min-width: 1200px) and (max-width: 1599px) {
+    .logo-container img {
+        width: 350px;
+        margin: 0.5em;
+    }
+    .menu-items {
+        right: 4em;
+        top: 5.5em;
+        font-size: 1.25em;
+        gap: 0.75em;
+        padding: 1.25em;
+    }
+    .button-menu-container {
+        gap: 2em;
     }
     .logout-name-div {
         flex-basis: 400px;
-        gap: 32px;
+        gap: 2em;
     }
     .hamburger-menu {
-        padding: 20px;
+        padding: 1.5em;
     }
     .bar {
         width: 30px;
@@ -210,4 +287,42 @@ nav {
 }
 
 
+/* Extra Large computer schermen */
+@media screen and (min-width: 1600px) {
+    .logo-container img {
+        width: 450px;
+        margin: 0.75em;
+    }
+    .menu-items {
+        right: 4.5em;
+        top: 6.75em;
+        font-size: 1.25em;
+        gap: 1em;
+        padding: 1.5em;
+    }
+    .button-menu-container {
+        gap: 3em;
+    }
+    .logout-name-div {
+        flex-basis: 400px;
+        gap: 2em;
+    }
+    .hamburger-menu {
+        padding: 3.5em;
+    }
+    .bar {
+        width: 30px;
+        height: 3px;
+        margin: 10px 0;
+    }
+    .hamburger-menu.open .bar:nth-child(1) {
+        transform: rotate(-45deg) translate(-12px, 6px);
+    }
+    .hamburger-menu.open .bar:nth-child(2) {
+        opacity: 0;
+    }
+    .hamburger-menu.open .bar:nth-child(3) {
+        transform: rotate(45deg) translate(-12px, -6px);
+    }
+}
 
